client/index.css
/* Spacing */
* {
  margin-top: 0;
  margin-bottom: 0;
  box-sizing: border-box;
}

main * + * {
  margin-top: 1.5em;
}

.p-m {
  padding: 16px;
}

.p-s {
  padding: 8px;
}

.pt-s {
  padding-top: 8px;
}

.pv-s {
  padding-top: 8px;
  padding-bottom: 8px;
}

.pv-l {
  padding-top: 32px;
  padding-bottom: 32px;
}

.ph-s {
  padding-left: 8px;
  padding-right: 8px;
}

.ph-xs {
  padding-left: 4px;
  padding-right: 4px;
}

.ph-m {
  padding-left: 16px;
  padding-right: 16px;
}

/* Display */
.block {
  display: block;
}

/* A11y */
.visually-hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}

[tabindex="-1"]:focus {
  outline: none;
}

html {
  font-size: 100%;
}

body {
  margin: 0;
  font-family: georgia, serif;
  color: #22292f;
}

h1,
h2 {
  max-width: 40ch;
  font-size: 1.3rem;
}

p,
li,
h3,
h4,
h5 {
  max-width: 60ch;
}

h1,
h2,
h3,
h4,
h5,
.font-sans-serif {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  line-height: 1.2;
}

p {
  line-height: 1.4;
}

.text-subtle {
  color: #3d4852;
  font-weight: normal;
}

a {
  color: #c35300;
  text-decoration-color: rgba(195, 83, 0, 0.4);
  -webkit-text-decoration-color: rgba(195, 83, 0, 0.4);
  transition: 0.1s text-decoration-color;
}

a:hover,
a:focus {
  text-decoration-color: #c35300;
}

a:focus {
  background-color: #c35300;
  outline: 3px solid #c35300;
  color: white;
}

.url {
  word-break: break-all;
}

.font-bold {
  font-weight: bold;
}

.skip-link {
  background: #22292f;
  color: white;
  display: block;
  position: absolute;
  transform: translateY(-100%);
  top: 0;
  left: 0;
  padding: 8px;
}

.skip-link:focus {
  transform: translateY(0%);
}

.main-nav {
  background: #f8fafc;
  border-bottom: 3px solid #f1f5f8;
  border-top: #ff6600 3px solid;
}

.main-nav__list {
  padding: 0;
  display: flex;
  margin-top: 8px;
}
.main-nav__list-item {
  display: inline-block;
}

.main-nav__link {
  text-decoration: none;
  color: #3d4852;
  font-weight: normal;
  box-shadow: 0 3px 0px #dae1e7;
}

.main-nav__link[aria-current="page"] {
  box-shadow: 0 3px 0px #ff6600;
  color: #22292f;
  font-weight: 500;
}

.main-nav__link:focus[aria-current="page"] {
  box-shadow: none;
  color: white;
}

.item-meta {
  font-weight: 600;
  font-size: 0.9em;
  color: #22292f;
}

.news-list-item * + * {
  margin-top: 0.7em;
}

.news-list-item__comments {
  font-weight: bold;
}

.pagination-list {
  display: flex;
  padding: 0;
}

.pagination-list * + * {
  margin-top: 0;
}

.pagination-list__item {
  display: block;
  font-weight: bold;
}

.pagination-list__link {
  padding: 8px;
}

.comments-list {
  padding-left: 0px;
}

.comments-list .comments-list {
  padding-left: 16px;
  border-left: 3px solid #dae1e7;
}

.comments-list__item {
  list-style: none;
}

.comments-list__item-content,
.comments-list__item-content * + * {
  margin-top: 0.7em !important;
}

.comments-list__item-content a {
  word-break: break-all;
}

.comments-list__item-content pre {
  overflow-x: auto;
}

.main-footer {
  background: #f8fafc;
  border-top: 3px solid #f1f5f8;
  border-bottom: #ff6600 3px solid;
}

